# automated-workflows

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  README.md  constraints.txt  docker-compose.yml  mkdocs.yml  pyproject.toml  tox.ini
.github/: labeler.yml
.github/workflows/: _auto-prod.yml  _gitops-delete-tags.yml  _gitops-merge-to-main.yml  _gitops-pr-to-main.yml  _gitops-pr-to-release.yml  _labeler.yml  _merge-rt-in-release.yml  _merge-to-boarding.yml  _merge-to-train.yml  _pr-to-boarding.yml  _pr-to-master.yml  _start-rt.yml  _tag-prod.yml  _update_test_branch.yml  cicd.yml  docker.yml  gh-release.yml  go-auto-merge-main.yml  go-delete-tags.yml  go-pr-to-boarding.yml  go-pr-to-main.yml  go-pr-to-release.yml  go-single-status.yml  go-tag-main.yml  lint.yml  policy_docs.yml  pypi-middle.yml  pypi.yml  pypi_env.yml  python_imports.yml  temp_workflow_for_testing.yml  test_build.yml  test_buld.yml
docs/: guide_setup_cicd.md  index.md  ref_docker.md  ref_docker.md-new  ref_gh_release.md  ref_lint.md  ref_lint.md-new  ref_pydeps.md  ref_pydeps.md-new  ref_pypi_env.md  ref_pypi_env.md-new  tests_index.md
docs/api/: ref_docker.md  ref_docs.md  ref_gh-release.md  ref_gitops_pr_to_boarding.md  ref_go-auto-merge-main.md  ref_go-delete-tags.md  ref_go-pr-to-boarding.md  ref_go-pr-to-main.md  ref_go-pr-to-release.md  ref_go-single-status.md  ref_go-tag-main.md  ref_policy_docs.md  ref_pydeps.md  ref_pypi.md  ref_pypi_env.md  (+2 more)
scripts/: check-git-branches-exist.sh  check-github-branch-protection-using-jq.sh  check-github-branch-protection.sh  check-setup-git-and-protection.sh  gen-docs-refs.sh  gen-workflow-ref.py  group-commits.sh  install-check-git-and-protection.sh  sem-ver-bump.sh  terminal-based-release.sh  uninstall-check-git-and-protection.sh
(+32 files in other folders)
