[tool.poetry]
name = "ga-workflows"
version = "0.1.0"
description = ""
authors = ["konstantinos <boromir674@hotmail.com>"]
readme = "README.md"
packages = [{include = "ga_workflows"}]


[tool.poetry.dependencies]
python = "^3.10"

mkdocs = {version = "^1.5.3", optional = true}
mkdocs-macros-plugin = {version = "^1.0.5", optional = true}
mkdocs-material = {version = "^9.4.14", optional = true}
mkdocs-mermaid2-plugin = {version = "^1.1.1", optional = true}
mkdocs-section-index = {version = "^0.3.8", optional = true}


[tool.poetry.extras]
docs = [
    "mkdocs",
    "mkdocs-macros-plugin",
    "mkdocs-material",
    "mkdocs-mermaid2-plugin",
    "mkdocs-section-index",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
